Fixed Wrapper Layout Issues, Adjusted Image Scaling

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -148,12 +148,6 @@
                 margin-left: 0;
             }
 
-            // vertical line separation between icons
-            &:nth-child(2n) {
-                margin: 0;
-                padding: 0;
-            }
-
             font-size: 0.9em;
             margin: 0 1em;
             text-decoration: none;
